--- a/src/index.scss
+++ b/src/index.scss
@@ -14,14 +14,19 @@ body {
   line-height: 1.2;
   background: #f5f5f5;
 }
-button{
+button {
   font-family: inherit;
 }
-:focus{
+:focus {
   outline: none;
 }
 .icon {
   width: 1em;
   height: 1em;
   display: inline-block;
+}
+.clearfix::after {
+  content: '';
+  display: block;
+  clear: both;
 }
